[project]
name = "autolibfuzz"
version = "0.1.0"
description = "A small learning demo for multi-agent fuzz"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "httpx[socks]>=0.28.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.3",
    "pyyaml>=6.0.3",
]
